# hrdf-parser

./: .gitignore  A.txt  Cargo.toml  HRDF.gv  README.md  a.g
data/: BAHNHOF  BFKOORD_LV95  BFKOORD_WGS  ECKDATEN
src/: constants.rs  debug.rs  hrdf.rs  isochrone.rs  lib.rs  main.rs  models.rs  parser.rs  parsing.rs  routing.rs  service.rs  storage.rs  utils.rs
src/isochrone/: circles.rs  constants.rs  contour_line.rs  models.rs  utils.rs
src/parsing/: BAHNHOF.rs  BFKOORD_LV95.rs  BFKOORD_WGS.rs  ECKDATEN.rs  GLEIS.rs  administration_transfer_parser.rs  attribute_parser.rs  attributes_parser.rs  bit_field_parser.rs  bit_fields_parser.rs  direction_parser.rs  directions_parser.rs  exchange_administration_parser.rs  exchange_journey_parser.rs  exchange_line_parser.rs  holiday_parser.rs  holidays_parser.rs  information_text_parser.rs  information_texts_parser.rs  journey_parser.rs  journey_transfer_parser.rs  line_parser.rs  line_transfer_parser.rs  platform_parser.rs  platforms.rs  platforms_parser.rs  stop_connection_parser.rs  stop_parser.rs  stops_parser.rs  through_service_parser.rs  through_services_parser.rs  time_difference_parser.rs  timetable_key_data_parser.rs  timetable_metadata_parser.rs  transfer_administration_parser.rs  transfer_journey_parser.rs  transfer_line_parser.rs  transport_company_parser.rs  transport_type_parser.rs
src/parsing/multiple_files_multiple_row_types/: platform_parser.rs  transport_company_parser.rs
src/parsing/multiple_files_single_row_type/: information_text_parser.rs
src/parsing/single_file_multiple_row_types/: attribute_parser.rs  (+4 more)
src/routing/: connections.rs  constants.rs  core.rs  display.rs  exploration.rs  models.rs  route.rs  route_impl.rs  utils.rs
(+10 files in other folders)
