[package]
name = "hrdf"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
bincode = "1.3.3"
chrono = { version = "0.4.31", features = ["serde"] }
contour = "0.13.1"
numpy = "0.21.0"
regex = "1.10.2"
reqwest = "0.12.5"
rustc-hash = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10.8"
strum = "0.25.0"
strum_macros = "0.25.3"
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread"] }
tower-http = { version = "0.5.2", features = ["cors"] }
url = "2.5.2"
zip = "2.1.3"

[profile.dev]
opt-level=3
