[package]
name = "hrdf-parser"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
chrono = { version = "0.4.31", features = ["serde"] }
log = "0.4.22"
regex = "1.10.2"
reqwest = "0.12.5"
rustc-hash = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10.8"
strum = "0.25.0"
strum_macros = "0.25.3"
url = "2.5.2"
zip = "2.1.3"

[profile.dev]
opt-level=3
