[package]
name = "hrdf-parser"
version = "0.1.1"
edition = "2021"

license-file = "LICENSE"
description = "This library is dedicated to the parsing of the HRDF format. For the moment, it can only parse the Swiss version of the HRDF format."
repository = "https://github.com/florianburgener/hrdf-parser"
authors = ["Florian Burgener"]

[dependencies]
bincode = "1.3.3"
chrono = { version = "0.4.31", features = ["serde"] }
log = "0.4.22"
regex = "1.10.2"
reqwest = "0.12.5"
rustc-hash = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10.8"
strum = "0.25.0"
strum_macros = "0.25.3"
url = "2.5.2"
zip = "2.1.3"

[profile.dev]
opt-level=3
